# zapFinan

./: .gitignore  .pre-commit-config.yaml  Com certeza.ini  README.md  ZapGastos.json  ZapGastos_organizado.json  docker-compose-local.yml  docker-compose.yml  expressions_1000.json  expressions_1000_com_categoria.json  expressions_com_categoria_test.json  expressions_test.json  gerr_embeddings.json  sql_simplified.sql  test_allday_commitment.json  test_commitment.json  test_invalid_date.json  test_lid_commitment.json  test_recurring_commitment.json  test_report_basic.json  test_report_category.json  test_report_invalid_category.json  test_report_invalid_date.json  test_report_recent.json
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  POETRY_MIGRATION.md  alembic.ini  main.py  migrate.py  pyproject.toml  requirements.txt  test_auth_simple.py  test_new_auth_system.py  test_security_fields.py
backend/app/: auth.py  categoria.py  dashboard.py  relatorios.py  transactions.py
backend/app/api/: api_keys.py  budget.py  categoria.py  commitment.py  dashboard.py  n8n_integration.py  plans.py  transactions.py  usage.py  user_phones.py  user_settings.py  users.py
backend/app/core/: api_key_auth.py  auth.py  config.py  database.py  deps.py  plan_validation.py  rate_limiter.py  security.py  validators.py
backend/app/crud/: __init__.py  api_key.py  base.py  budget.py  category.py  commitment.py  plan.py  transaction.py  user.py  user_phone.py  user_settings.py
backend/app/models/: __init__.py  api_key.py  budget.py  category.py  commitment.py  consent.py  expression_embedding.py  payment.py  plan.py  transaction.py  user.py  user_phone.py  user_settings.py
backend/app/schemas/: __init__.py  api_key.py  budget.py  category.py  commitment.py  dashboard.py  n8n.py  plan.py  transaction.py  user.py  user_phone.py  user_settings.py
backend/app/services/: budget_service.py  category_filter.py  google_calendar_service.py  usage_service.py
backend/migrations/: env.py
backend/migrations/versions/: 16519707cd48_add_lid_field_to_users.py  20250125_budget_tables.py  20250125_commitment_tables.py  20250125_initial.py  20250125_user_security_fields.py  20250929_001_create_user_phones.py  20250929_002_migrate_phones_data.py  20250929_003_expand_plans_table.py  20250930_004_make_telefone_nullable.py  20250930_005_add_lid_to_user_phones.py  20251003_001_add_api_keys_table.py  4a358dcb9542_add_webapp_to_canal_constraint.py  68f0cded3490_add_user_settings_table.py  9cecdd2bbe54_add_webapp_to_canal_constraint.py
backend/scripts/: __init__.py  create_system_key.py
docs/: README.md  expressions_1000.json  expressions_1000_com_categoria.json  expressions_com_categoria_test.json  expressions_test.json  gerr_embeddings.json  implementação multi usuario e planos.txt  n8n-api-key-setup.md  prompt_ia_agente_zapgastos.txt  zapgastos_text_classifier_prompt.txt  🧠 Resumo do Projeto ZapGastos.txt
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App.tsx  main.tsx  router.tsx
images/: ChatGPT - Controle Financeiro via Zap.html
mockup_frontend/: README.md
(+173 files in other folders)
